# Fem1

./: app.py  fem_solver.py  models.py  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1750918126016_1750918126016.txt  Pasted--Fem-MultiModel-Frontend-Application-class-FemMultiModel-constructor-this-eventS-1750918184656_1750918184656.txt  Pasted--Fem-MultiModel-Space-Theme-Solar-System-with-Orange-Accents-root-primary-gradient--1750918168724_1750918168725.txt  femai_multimodel_1750917968741.py
instance/: fem_multimodel.db
static/css/: style.css
static/js/: app.js
templates/: 404.html  500.html  base.html  index.html  profile.html
